issue css on IOS device

--- a/web/src/app/layout/menu/menu.component.scss
+++ b/web/src/app/layout/menu/menu.component.scss
@@ -360,7 +360,7 @@ button {
 
 .scrollable-menu {
   position: relative;
-  background-color: #2f2727;
+  background-color: blue;
   padding-left: 10px;
   padding-right: 10px;
 }
